force-app/main/default/objects/Email_Alert_Recipient__c/Email_Alert_Recipient__c.object-meta.xml
<CustomObject>
    <label>Email Alert Recipient</label>
    <nameField>
        <label>Recipient</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Alert Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>