force-app/main/default/objects/Email_Alert_Recipient__c/fields/Item_Snapshot_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Item_Snapshot_Email_Alert__c</fullName>
    <label>Item Snapshot Email Alert</label>
    <referenceTo>Item_Snapshot_Email_Alert__c</referenceTo>
    <relationshipLabel>Email Alert Recipients</relationshipLabel>
    <relationshipName>Email_Alert_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>