force-app/main/default/objects/Email_Alert_Recipient__c/fields/Recipient_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Field__c</fullName>
    <label>Recipient Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>