force-app/main/default/objects/Email_Alert_Recipient__c/fields/type_x__c.field-meta.xml
<CustomField>
    <fullName>type_x__c</fullName>
    <label>type_x</label>
    <length>255</length>
    <type>Text</type>
</CustomField>